Quixe whitespace fix

--- a/public/interpreters/quixe/2.1.6/media/glkote.css
+++ b/public/interpreters/quixe/2.1.6/media/glkote.css
@@ -64,6 +64,7 @@
 }
 
 .BufferLine {
+  white-space: pre-wrap;
 }
 
 .GridWindow {
